adding list in html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 </head>
 <body>
 	<p>Hey this is index.html</p>
+
+	<ul>
+		<li>one</li>
+		<li>two</li>
+		<li>three</li>
+	</ul>
 </body>
 </html>
