--- a/second.html
+++ b/second.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>2nd HTML</title>
+	<title>2nd HTML ok</title>
 </head>
 <body>
 	<h3>2nd HTML is here ... updated</h3>
