adding break on 7th line

--- a/second.html
+++ b/second.html
@@ -4,6 +4,6 @@
 	<title>2nd HTML ok</title>
 </head>
 <body>
-	<h3>2nd HTML is here ... updated</h3>
+	<h3>2nd HTML is here ... updated</h3><br>
 </body>
 </html>
